--- a/steep_expectations.yml
+++ b/steep_expectations.yml
@@ -4,38 +4,28 @@
   - range:
       start:
         line: 78
-        character: 13
+        character: 31
       end:
         line: 78
+        character: 42
+    severity: ERROR
+    message: |-
+      Cannot assign a value of type `nil` to an expression of type `::BBK::App::Dispatcher::_Message`
+        nil <: ::BBK::App::Dispatcher::_Message
+    code: Ruby::IncompatibleAssignment
+  - range:
+      start:
+        line: 88
+        character: 44
+      end:
+        line: 88
         character: 53
     severity: ERROR
-    message: 'Method parameters are incompatible with declaration `(::BBK::App::Dispatcher::_IncomingMessage,
-      *untyped, ?answer: ::BBK::App::Dispatcher::_Message, **untyped) -> void`'
-    code: Ruby::MethodArityMismatch
-  - range:
-      start:
-        line: 88
-        character: 14
-      end:
-        line: 88
-        character: 54
-    severity: ERROR
-    message: 'Method parameters are incompatible with declaration `(::BBK::App::Dispatcher::_IncomingMessage,
+    message: 'The method parameter has different kind from the declaration `(::BBK::App::Dispatcher::_IncomingMessage,
       *untyped, ?error: untyped, ?requeue: untyped, **untyped) -> void`'
-    code: Ruby::MethodArityMismatch
+    code: Ruby::DifferentMethodParameterKind
 - file: lib/bbk/amqp/message.rb
   diagnostics:
-  - range:
-      start:
-        line: 40
-        character: 13
-      end:
-        line: 40
-        character: 43
-    severity: ERROR
-    message: 'Method parameters are incompatible with declaration `(*untyped, ?answer:
-      (::BBK::App::Dispatcher::Result | nil), **untyped) -> void`'
-    code: Ruby::MethodArityMismatch
   - range:
       start:
         line: 41
@@ -46,17 +36,6 @@
     severity: ERROR
     message: Unsupported splat node occurrence
     code: Ruby::UnsupportedSyntax
-  - range:
-      start:
-        line: 44
-        character: 14
-      end:
-        line: 44
-        character: 43
-    severity: ERROR
-    message: 'Method parameters are incompatible with declaration `(*untyped, ?error:
-      untyped, **untyped) -> void`'
-    code: Ruby::MethodArityMismatch
   - range:
       start:
         line: 45
